crates/analyzer/tests/snapshots/errors__string_no_type_args.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: `String` expects 1 generic argument, but 0 were provided
  ┌─ [snippet]:3:10
  │
3 │   let x: String<>
  │          ^^^^^^-- supplied 0 arguments
  │          │      
  │          expects 1 generic argument


